tests/dataset/tpc-ds/compiler/c/q53.error
/tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c:236:8: error: conflicting types for ‘abs’; have ‘double(double)’
  236 | double abs(double x) {
      |        ^~~
In file included from /tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c:3:
/usr/include/stdlib.h:980:12: note: previous declaration of ‘abs’ with type ‘int(int)’
  980 | extern int abs (int __x) __THROW __attribute__ ((__const__)) __wur;
      |            ^~~
/tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c: In function ‘test_TPCDS_Q53_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c:246:20: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  246 |                    (tmp_item_t){.i_manufact_id = 2, .sum_sales = 53.0}};
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c:249:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  249 |   if (test_TPCDS_Q53_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c:253:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  253 |       if (test_TPCDS_Q53_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq532927591538/001/prog.c:309:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  309 |   test_TPCDS_Q53_simplified_result = result;
      |                                      ^~~~~~
